@@ -19,6 +19,7 @@ Version 1.0.1 to be released
 - Enhancement #56: Allow specifying customized 'on' when a validator can be applied (Qiang)
 - Enhancement #58: Allow specifying HAVING clause in DB criteria (Qiang)
 - Enhancement #64: Add support to use relational AR when FK constraints are not defined in DB (Qiang)
+- Enhancement #66: Add support to allow using isset() and unset() with component properties (Qiang)
 - Enhancement: Fixed inaccurate error message when adding an item as a child of itself in CAuthManager (Qiang)
 - Enhancement: CHtml::activeId and CHtml::activeName (Qiang)
 - Enhancement: Added German and Spanish core message translations (mikl, sebas)
